Project Modularization and backtesting facility